cleaup preseed
